tests/baselines/reference/nodeModulesGeneratedNameCollisions(module=node16).errors.txt
subfolder/index.ts(2,10): error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
subfolder/index.ts(3,7): error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
subfolder/index.ts(4,7): error TS2725: Class name cannot be 'Object' when targeting ES5 with module Node16.
subfolder/index.ts(5,14): error TS1216: Identifier expected. '__esModule' is reserved as an exported marker when transforming ECMAScript modules.


==== subfolder/index.ts (4 errors) ====
    // cjs format file
    function require() {}
             ~~~~~~~
!!! error TS2441: Duplicate identifier 'require'. Compiler reserves name 'require' in top level scope of a module.
    const exports = {};
          ~~~~~~~
!!! error TS2441: Duplicate identifier 'exports'. Compiler reserves name 'exports' in top level scope of a module.
    class Object {}
          ~~~~~~
!!! error TS2725: Class name cannot be 'Object' when targeting ES5 with module Node16.
    export const __esModule = false;
                 ~~~~~~~~~~
!!! error TS1216: Identifier expected. '__esModule' is reserved as an exported marker when transforming ECMAScript modules.
    export {require, exports, Object};
==== index.ts (0 errors) ====
    // esm format file
    function require() {}
    const exports = {};
    class Object {}
    export const __esModule = false;
    export {require, exports, Object};
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }